# aira-medical-necessity

./: .dockerignore  .env.example  .gitignore  DESIGN_NOTE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
advanced_prior_auth_test_pack/: GUIDELINE_SOURCES.md  README.md  expected_results.json  expected_results_bcbs.json  generate_bcbs_patients.py
backend/app/: compiler.py  evaluator.py  extractor.py  llm.py  main.py  models.py  pdf_extract.py  pipeline.py  reference.py  router.py  store.py  trace.py  verifier.py
backend/tests/: test_api.py  test_compiler.py  test_evaluator.py  test_extractor.py  test_llm.py  test_models.py  test_pdf_extract.py  test_pipeline.py  test_reference.py  test_router.py  test_verifier.py
backend/tests/samples/: make_synthetic_charts.py
docs/superpowers/plans/: 2026-07-15-medical-necessity-checker.md
docs/superpowers/specs/: 2026-07-15-medical-necessity-checker-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: CriterionRow.tsx  GapList.tsx  ResultView.tsx  UploadPanel.tsx
frontend/src/lib/: status.ts
