[project]
name = "aira-medical-necessity"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
    "pypdf>=4.0",
    "openai>=1.30",
    "mistralai>=1.0,<2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
